@@ -1,3 +1,9 @@
+2015-05-21  Richard Biener  <rguenther@suse.de>
+
+	PR c++/66211
+	* g++.dg/conversion/pr66211.C: New testcase.
+	* gcc.dg/tree-ssa/forwprop-18.c: Adjust.
+
 2015-05-21  Jeff Law  <law@redhat.com>
 
 	* gcc.target/hppa/shadd-2.c: New test.
